# pickme

./: .gitignore  CLAUDE.md  README.md  env.yml  pickme.py  pyproject.toml
pickme/: __main__.py  app.py  runner.py  runs.py
scripts/: identify.py
tests/: test_m1.py  test_m2.py  test_m3.py  test_m4.py  test_m5.py  test_m6.py
tests/fixtures/: generate_fastqs.py
tests/fixtures/refs/: dcas9_v1.gb  empty_vec.gb  rev340.gb  rev341.gb  rev342.gb
tn5verify/: align.py  characterize.py  features.py  grouping.py  identify.py  insert_scan.py  integrity.py  refs.py  target.py  types.py
tn5verify/render/: json_dump.py  plate.py  well_report.py
